crates/toml/tests/snapshots/invalid/local-datetime/minute-over.stderr
TOML parse error at line 2, column 5
  |
2 | d = 2006-01-01T00:60:00
  |     ^^^^^^^^^^^^^^^^^^^
invalid time, expected minute between 00 and 59
